--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Weekly Politics and Business by Ivan Brookes
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.onestopenglish.com%2Flessons%2Fthe-history-of-the-uk-parliament%2F551182.article&psig=AOvVaw1I2-kOpc5IXjPHYx19y3Hl&ust=1725144903557000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNDxgOPnnYgDFQAAAAAdAAAAABAE
 
 #
 # Flags below are optional
